Height fix and hot fix for collapsed bug

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -5,13 +5,22 @@ html,body {
 }
 .glimpse-container {
 	width: 100%;
-	height: 860px;
+	height: 850px;
 	overflow: auto;
 	cursor: -webkit-grab;
     cursor: -moz-grab;
     cursor: -o-grab;
     cursor: grab;
 }
+
+/*.noselect {
+  -webkit-touch-callout: none; 
+  -webkit-user-select: none;   
+  -khtml-user-select: none;    
+  -moz-user-select: none;      
+  -ms-user-select: none;       
+  user-select: none;                                    
+}*/
 
 .navbar {
 	border-radius: 0px;
@@ -43,8 +52,9 @@ html,body {
 	padding: 0;
 	background-color: #ecf0f1;
 }
+
 .sqlv-table li {
-	padding: 1px;
+	height: 24px;
 }
 
 .sqlv-tableHeader {
@@ -79,4 +89,13 @@ html,body {
 
 .svg-link:hover {
 	stroke: black;
+}
+
+footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   background:#999;
 }
